fix align

--- a/src/styles/Box/ItemCountContainer.css
+++ b/src/styles/Box/ItemCountContainer.css
@@ -3,4 +3,5 @@
     margin-left: 3rem;
     margin-top: 3rem;
     height: auto;
+    text-align: center;
 }
